--- a/style.css
+++ b/style.css
@@ -264,11 +264,13 @@
   .publication-item .col-2 {
     flex: 0 0 20% !important;
     max-width: 20% !important;
+    padding-right: 1.5rem !important;
   }
   
   .publication-item .col-10 {
     flex: 0 0 80% !important;
     max-width: 80% !important;
+    padding-left: 0.5rem !important;
   }
   
   /* Fix profile icons to be square on desktop */
